--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -2,8 +2,8 @@
 
     &__card{
         display: flex;
-        height: 150px;
-        width: 150px;
+        height: 75px;
+        width: 75px;
         border: 1px solid black;
         align-items: center;
         justify-content: center;
@@ -22,7 +22,29 @@
 }
 
 .home{
+     margin: 1rem;
 
+     &__select{
+
+        &-current{
+            padding: .25rem 0.5rem;
+            border: 1px solid black;
+            margin-bottom: 1rem;
+        }
+
+        &-cont{
+            border: 0.1px solid black;
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
+            margin-bottom: 1rem;
+        }
+
+        &-options{
+            padding: 0 1rem;
+        }
+        
+     }
     &__container{
         display: flex;
         flex-wrap: wrap;
